--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "jquery": "^3.6.0",
     "morgan": "~1.9.1",
     "mssql": "^5.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "request": "^2.88.0"
   }
 }
