--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mssql": "^5.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "passport-microsoft": "^0.1.0",
     "request": "^2.88.0"
   }
 }
