Ajuste do .ENV para desenvolvimento, exemplo e produção

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 HOST=localhost
 PORT=21094
+
+MYSQL_CONNECTIONLIMIT=10
+MYSQL_HOST=mysql.alvesesilva.com.br
+MYSQL_USER=alvesesilva
+MYSQL_PASSWORD=b695820D
+MYSQL_DATABASE=alvesesilva
