Teste de estratégia Multi Tenant

--- a/.dev.env
+++ b/.dev.env
@@ -6,3 +6,5 @@ MYSQL_HOST=localhost
 MYSQL_USER=root
 MYSQL_PASSWORD=P&r$0N@36o
 MYSQL_DATABASE=alvesesilva
+
+BOOTSTRAP_ICONS=https://icons.getbootstrap.com/
