--- a/.env
+++ b/.env
@@ -23,3 +23,6 @@ COOKIE_SAMESITE=Strict #sameSite (boolean|none|lax|strict): Strict or Lax enforc
 ISSUER=https://dev-19733368.okta.com/oauth2/default
 CLIENT_ID=0oa15brkf3RAU2PYm5d7
 CLIENT_SECRET=G38am8dxTXZTXXDodNIlDVviYUQKnnKTejxzhGgJ
+
+# tiny 
+TINY_API_KEY=y0ng3e1qg81psn5za5nbm6xtupau6oucdv28kqmh14w07dj0
