Cover Home Page

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ COOKIE_SECRET=*Persona360_UmaNovaManeiraDeEstabelecerRelacionamentoEntreAgentesD
 COOKIE_PATH=/ #path //(string): cookie path, use / as the path if you want your cookie to be accessible on all pages
 COOKIE_EXPIRES=0 #expires (Date): absolute expiration date for the cookie
 COOKIE_MAXAGE=86400 #relative max age of the cookie from when the client receives it in seconds
-COOKIE_DOMAIN=escola.pro.br #domain (string): domain for the cookie (sub.domain.com or .allsubdomains.com)
+COOKIE_DOMAIN=persona360.com.br #domain (string): domain for the cookie (sub.domain.com or .allsubdomains.com)
 COOKIE_SECURE=true #secure (boolean): Is only accessible through HTTPS?
 COOKIE_HTTPONLY=true #httpOnly (boolean): Is only the server can access the cookie?
 COOKIE_SAMESITE=Strict #sameSite (boolean|none|lax|strict): Strict or Lax enforcement
