Iniciando utilização do SQL SERVER

--- a/.env
+++ b/.env
@@ -1,11 +1,20 @@
 HOST=localhost
 PORT=80
 
-MYSQL_CONNECTIONLIMIT=10
-MYSQL_HOST=mysql.alvesesilva.com.br
-MYSQL_USER=alvesesilva
-MYSQL_PASSWORD=b695820D
-MYSQL_DATABASE=alvesesilva
+#MS SQLSERVER  
+MSSQL_USER=alvesesilva
+MSSQL_PASSWORD=a_03S0Q0L80_s
+MSSQL_SERVER=198.71.225.113
+MSSQL_DATABASE=alvesesilva
+MSSQL_PORT=1433
+   
+#    'persona360': {
+#        user: 'persona360',
+#        password: '3i0b0i8&a206958E',
+#        server: 'A2NWPLSK14SQL-v04.shr.prod.iad2.secureserver.net:1433',
+#        database: 'alvesesilva',
+#        port: 1433
+#    }
 
 SESSION_SECRET=@Persona=360$2021
 
@@ -18,11 +27,6 @@ COOKIE_DOMAIN=persona360.com.br #domain (string): domain for the cookie (sub.dom
 COOKIE_SECURE=true #secure (boolean): Is only accessible through HTTPS?
 COOKIE_HTTPONLY=true #httpOnly (boolean): Is only the server can access the cookie?
 COOKIE_SAMESITE=Strict #sameSite (boolean|none|lax|strict): Strict or Lax enforcement
-
-# OKTA CONFIGURATION
-ISSUER=https://dev-19733368.okta.com/oauth2/default
-CLIENT_ID=0oa15brkf3RAU2PYm5d7
-CLIENT_SECRET=G38am8dxTXZTXXDodNIlDVviYUQKnnKTejxzhGgJ
 
 # tiny 
 TINY_API_KEY=y0ng3e1qg81psn5za5nbm6xtupau6oucdv28kqmh14w07dj0
