--- a/.exemple.env
+++ b/.exemple.env
@@ -1,11 +1,12 @@
 HOST=
 PORT=
 
-MYSQL_CONNECTIONLIMIT=
-MYSQL_HOST=
-MYSQL_USER=
-MYSQL_PASSWORD=
-MYSQL_DATABASE=
+#MS SQLSERVER  
+MSSQL_USER=string
+MSSQL_PASSWORD=string
+MSSQL_SERVER=name or ip
+MSSQL_DATABASE=string
+MSSQL_PORT=number
 
 # tiny 
 TINY_API_KEY=
