--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
     "npm": "npm install"
   },
   "dependencies": {
-    "@google-cloud/language": "^4.2.7",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "ejs": "^2.7.1",
     "express": "~4.16.1",
-    "googleapis": "^81.0.0",
     "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "ip": "^1.1.5",
     "morgan": "~1.9.1",
+    "mssql": "^7.1.3",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
