--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "teste": "nodemon ./index.js",
     "prod": "pm2 start ./index.js",
     "dev": "NODE_ENV=dev nodemon ./index.js",
-    "npm": "npm install"
+    "build": "NODE_ENV=dev node ./back_end/.aes/build.js"
   },
   "dependencies": {
+    "audit": "^0.0.6",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^2.7.1",
     "express": "~4.16.1",
+    "fix": "^0.0.3",
     "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "ip": "^1.1.5",
