--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
   },
   "scripts": {
     "teste": "nodemon ./index.js",
-    "prod": "pm2 start ./index.js",
-    "dev": "NODE_ENV=dev nodemon ./index.js",
-    "build": "NODE_ENV=dev node ./back_end/.aes/build.js"
-  },
+    "dev": "NODE_ENV=dev nodemon ./index.js"
+    },
   "dependencies": {
     "audit": "^0.0.6",
     "body-parser": "^1.18.3",
