--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.1.3"
+    "socket.io": "^4.1.3",
+    "npm": "^6.14.14"
   }
 }
