--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "teste": "nodemon ./index.js",
-    "dev": "NODE_ENV=dev nodemon ./index.js"
+    "prod": "pm2 start ./index.js",
+    "dev": "NODE_ENV=dev nodemon ./index.js",
+    "npm": "npm install"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -21,12 +23,12 @@
     "express": "~4.16.1",
     "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
+    "ip": "^1.1.5",
     "morgan": "~1.9.1",
     "mssql": "^7.1.3",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.1.3",
-    "npm": "^6.14.14"
+    "socket.io": "^4.1.3"
   }
 }
