--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "teste": "nodemon ./index.js",
-    "dev": "NODE_ENV=dev nodemon ./index.js"
+    "dev": "NODE_ENV=dev nodemon ./index.js",
+    "build": "DB_PROFILE=mssql node ./aes-build/build.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -19,14 +20,15 @@
     "dotenv": "^10.0.0",
     "ejs": "^2.7.1",
     "express": "~4.16.1",
+    "fs-extra": "^10.0.0",
     "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mssql": "^7.1.3",
     "multer": "^1.4.2",
+    "npm": "^6.14.14",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.1.3",
-    "npm": "^6.14.14"
+    "socket.io": "^4.1.3"
   }
 }
