--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "~4.16.1",
     "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
+    "mime-type": "^4.0.0",
     "morgan": "~1.9.1",
     "mssql": "^7.2.1",
     "multer": "^1.4.2",
