Sistema orientado a EVENTOS inspirado no Diagrama de Ishikawa regido pelo Ikigai

--- a/.dev.env
+++ b/.dev.env
@@ -26,3 +26,6 @@ TINY_API_KEY=y0ng3e1qg81psn5za5nbm6xtupau6oucdv28kqmh14w07dj0
 
 # Google Cloud Apis
 GOOGLE_API_KEY=AIzaSyAVyCmrMmNmf2XvL8xQtFMFsd0nSCdyaTs
+
+# Droplet Nodel Digital Ocean PW
+ROOT_DO_DROPLET=a206958E&3i0b0i8s
