--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "persona-360",
-  "version": "1.0.0",
-  "private": true,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Arte-e-Software/persona360.git"
-  },
-  "scripts": {
-    "teste": "nodemon ./index.js",
-    "dev": "NODE_ENV=dev nodemon ./index.js"
-  },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "body-parser": "^1.18.3",
-    "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
-    "debug": "~2.6.9",
-    "dotenv": "^10.0.0",
-    "ejs": "^2.7.1",
-    "express": "~4.16.1",
-    "helmet": "^4.6.0",
-    "http-errors": "~1.6.3",
-    "mime-type": "^4.0.0",
-    "morgan": "~1.9.1",
-    "mssql": "^7.2.1",
-    "multer": "^1.4.2",
-    "npm": "^7.21.0",
-    "open": "^8.2.1",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "socket.io": "^4.1.3",
-    "standard": "^16.0.3"
-  },
-  "devDependencies": {
-    "eslint": "^7.32.0"
-  }
+    "name": "persona-360",
+    "version": "1.0.0",
+    "private": true,
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Arte-e-Software/persona360.git"
+    },
+    "scripts": {
+        "test": "NODE_ENV=test nodemon ./index.js",
+        "dev": "NODE_ENV=dev nodemon ./index.js"
+    },
+    "dependencies": {
+        "axios": "^0.21.1",
+        "body-parser": "^1.18.3",
+        "cookie-parser": "~1.4.4",
+        "cors": "^2.8.5",
+        "crypto-js": "^4.1.1",
+        "debug": "~2.6.9",
+        "dotenv": "^10.0.0",
+        "ejs": "^2.7.1",
+        "express": "~4.16.1",
+        "helmet": "^4.6.0",
+        "http-errors": "~1.6.3",
+        "mime-type": "^4.0.0",
+        "morgan": "~1.9.1",
+        "mssql": "^7.2.1",
+        "multer": "^1.4.2",
+        "npm": "^7.21.0",
+        "open": "^8.2.1",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
+        "socket.io": "^4.1.3",
+        "standard": "^16.0.3"
+    },
+    "devDependencies": {
+        "eslint": "^7.32.0"
+    }
 }
